# lox

./: README.md
.github/workflows/: buildtest.yml  c-cpp.yml
clox/: CMakeLists.txt
clox/src/: CMakeLists.txt  chunk.c  chunk.h  common.c  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  value.c  value.h  vm.c  vm.h
clox/test/: CMakeLists.txt  basic_arithmetic.lox  basic_arithmetic.out  boolean_logic.lox  boolean_logic.out  string_concat.lox  string_concat.out
cpplox/: .clang-format  .clang-tidy  CMakeLists.txt
cpplox/src/: CMakeLists.txt  ast_printer.h  box.h  environment.cpp  environment.h  error.cpp  error.h  expr.h  interpreter.cpp  interpreter.h  lox.cpp  parser.cpp  parser.h  scanner.cpp  scanner.h  scope_exit.h  stmt.h  token.cpp  token.h  types.cpp  types.h
cpplox/test/: CMakeLists.txt  unterminated_string.out
cpplox/test/ast/: CMakeLists.txt  basic.lox  basic.out  variables.lox  variables.out
cpplox/test/interpret/: CMakeLists.txt  basic_arithmetic_integer.lox  dynamic_scope_bug.lox  if_statement.lox  if_statement.out  string_concat.lox  unwind_block.lox  unwind_block.out  var_addition.lox  while_statement.lox
cpplox/test/tokens/: CMakeLists.txt  arithmetic.out  keywords_identifiers.lox  keywords_identifiers.out  string_concat.out  unterminated_string.out
